build/errors/error2.txt
adam@dig:~/openhip-openhip-7ca0bd5421a5$ make
make  all-recursive
make[1]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Making all in src
make[2]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
make[3]: Entering directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
gcc -DHAVE_CONFIG_H -I. -I.. -I./include -I/usr/include/libxml2   -DHITGEN  -g -O2 -O3 -Werror -D_GNU_SOURCE -fno-strict-aliasing -Wall -DCONFIG_HIP -DSYSCONFDIR="\"/usr/local/etc/hip\"" -DLOCALSTATEDIR="\"/var\""   -MT hitgen-hitgen.o -MD -MP -MF .deps/hitgen-hitgen.Tpo -c -o hitgen-hitgen.o `test -f 'util/hitgen.c' || echo './'`util/hitgen.c
util/hitgen.c: In function ‘generate_HI’:
util/hitgen.c:162:60: error: passing argument 3 of ‘RSA_generate_key_ex’ makes pointer from integer without a cast [-Werror=int-conversion]
       int retRSA = RSA_generate_key_ex(rsa, opts->bitsize, e, NULL);
                                                            ^
In file included from util/hitgen.c:40:0:
/usr/include/openssl/rsa.h:198:5: note: expected ‘BIGNUM * {aka struct bignum_st *}’ but argument is of type ‘long unsigned int’
 int RSA_generate_key_ex(RSA *rsa, int bits, BIGNUM *e, BN_GENCB *cb);
     ^~~~~~~~~~~~~~~~~~~
util/hitgen.c:140:11: error: unused variable ‘dsaRet’ [-Werror=unused-variable]
       int dsaRet = DSA_generate_parameters_ex(dsa, opts->bitsize, seed, sizeof(seed),
           ^~~~~~
util/hitgen.c:220:65: error: dereferencing pointer to incomplete type ‘DSA {aka struct dsa_st}’
       xmlNewChild(hi, NULL, BAD_CAST "P", BAD_CAST BN_bn2hex(dsa->p));
                                                                 ^~
util/hitgen.c:229:65: error: dereferencing pointer to incomplete type ‘RSA {aka struct rsa_st}’
       xmlNewChild(hi, NULL, BAD_CAST "N", BAD_CAST BN_bn2hex(rsa->n));
                                                                 ^~
cc1: all warnings being treated as errors
Makefile:1103: recipe for target 'hitgen-hitgen.o' failed
make[3]: *** [hitgen-hitgen.o] Error 1
make[3]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:1151: recipe for target 'all-recursive' failed
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5/src'
Makefile:422: recipe for target 'all-recursive' failed
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory '/home/adam/openhip-openhip-7ca0bd5421a5'
Makefile:357: recipe for target 'all' failed
make: *** [all] Error 2